welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: illegal start of simple pattern
    for (case <- 1 to 6) {
         ^Program:15: error: '<-' expected but '}' found.
		}
                ^